// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input should render default correctly 1`] = `
<label class="fx-input">
  <!----> <input name="" type="text" inputmode="text" placeholder="" maxlength="140" class="fx-input_input" value="">
  <!---->
  <!---->
</label>
`;

exports[`Input should render prop disabled=true correctly 1`] = `
<label class="fx-input disabled">
  <!----> <input name="" type="text" inputmode="text" disabled="disabled" placeholder="" maxlength="140" class="fx-input_input" value="">
  <!---->
  <!---->
</label>
`;

exports[`Input should render prop maxlength=200 correctly 1`] = `
<label class="fx-input">
  <!----> <input name="" type="text" inputmode="text" placeholder="" maxlength="200" class="fx-input_input" value="">
  <!---->
  <!---->
</label>
`;

exports[`Input should render prop showClear=true correctly 1`] = `
<label class="fx-input">
  <!----> <input name="" type="text" inputmode="text" placeholder="" maxlength="140" class="fx-input_input" value="">
  <icon-stub icon="CloseCircleFilled" size="0" width="0" height="0" class="fx-input_clear" style="display: none;"></icon-stub>
  <!---->
</label>
`;
